all-pages-update

--- a/gallery.html
+++ b/gallery.html
@@ -213,7 +213,7 @@
                             <div class="footer-wrapper">
                                 <h3>About</h3>
 
-                                <p>Jaya Cotton established in 2002 by Mr.N.Subbarao,<br>
+                                <p class="content-align">Jaya Cotton established in 2002 by Mr.N.Subbarao,<br>
                                     is the leading Cotton Ginning Manufacturing<br>
                                     Industry in the last 17 years The company is<br>
                                      specialized in processing Raw Cotton and <br>
@@ -283,7 +283,7 @@
                     
                 </li><!-- end of li -->
 
-                <li>
+                <li class="active" >
                     <a  href="./gallery">Gallery </a>
                     
                 </li><!-- end of li -->
