--- a/blog.html
+++ b/blog.html
@@ -226,7 +226,7 @@
                             <div class="footer-wrapper">
                                 <h3>About</h3>
 
-                                <p>Jaya Cotton established in 2002 by Mr.N.Subbarao,<br>
+                                <p class="content-align">Jaya Cotton established in 2002 by Mr.N.Subbarao,<br>
                                     is the leading Cotton Ginning Manufacturing<br>
                                     Industry in the last 17 years The company is<br>
                                      specialized in processing Raw Cotton and <br>
@@ -300,7 +300,7 @@
                  
              </li><!-- end of li -->
 
-             <li>
+             <li class="active">
                  <a  href="./blog">blog </a>
                  
              </li><!-- end of li -->
