--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Jaya Cotton</title>
+        <title>Jaya Cotton | blogs</title>
         <!-- fav icon -->
-        <link href="assets/images/favicon.png" rel="shortcut icon" type="image/png">
+        <link href="assets/images/jaya-cotton-favicon-logo-55x50.png" rel="shortcut icon" type="image/png">
 
         <!-- Bootstrap -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -106,7 +106,7 @@
                                 the cotton industry in India, announced a drop in the 2021-22 cotton production in India by about 2.33%,
                                 earlier this year. </p>
 
-                            <a href="single-blog.html" class="link">Read More</a>
+                            <a href="#" class="link">Read More</a>
 
                             <!-- <div class="author pull-right">
                                 <img src="assets/images/blog/blog-author.png" alt="">
@@ -301,11 +301,11 @@
              </li><!-- end of li -->
 
              <li class="active">
-                 <a  href="./blog">blog </a>
+                 <a  class="active" href="./blog">blog </a>
                  
              </li><!-- end of li -->
 
-             <li><a class="active" href="./contact">Contact</a></li><!-- end of li -->
+             <li><a  href="./contact">Contact</a></li><!-- end of li -->
          </ul> <!-- menu-wrapper -->            
      </div>
      <!-- Off-Canvas View Only -->
