--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>jaya cotton | Home</title>
         <!-- fav icon -->
-        <link href="assets/images/favicon.png" rel="shortcut icon" type="image/png">
+        <link href="assets/images/jaya-cotton-favicon-logo-55x50.png" rel="shortcut icon" type="image/png">
 
         <!-- Bootstrap -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -541,7 +541,7 @@
     <span class="close-menu"><i class="fa fa-times" aria-hidden="true"></i></span>
 
     <ul class="menu-wrapper">
-        <li>
+        <li >
             <a class="active"  href="./">Home </a>
                 
         </li><!-- end of li -->
