--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Jaya cotton | Our Products</title>
         <!-- fav icon -->
-        <link href="assets/images/favicon.png" rel="shortcut icon" type="image/png">
+        <link href="assets/images/jaya-cotton-favicon-logo-55x50.png" rel="shortcut icon" type="image/png">
 
         <!-- Bootstrap -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -356,7 +356,7 @@
                 </li><!-- end of li -->
 
                 <li>
-                    <a  href="./gallery">Gallery </a>
+                    <a class="active"  href="./gallery">Gallery </a>
                     
                 </li><!-- end of li -->
 
@@ -365,7 +365,7 @@
                     
                 </li><!-- end of li -->
 
-                <li><a class="active" href="./contact">Contact</a></li><!-- end of li -->
+                <li><a  href="./contact">Contact</a></li><!-- end of li -->
             </ul> <!-- menu-wrapper -->            
         </div>
         <!-- Off-Canvas View Only -->
