--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Jaya Cotton</title>
+        <title>Jaya Cotton | Contact</title>
         <!-- fav icon -->
-        <link href="assets/images/favicon.png" rel="shortcut icon" type="image/png">
+        <link href="assets/images/jaya-cotton-favicon-logo-55x50.png" rel="shortcut icon" type="image/png">
 
         <!-- Bootstrap -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -288,7 +288,7 @@
                 </li><!-- end of li -->
 
                 <li>
-                    <a  href="./blog">blog </a>
+                    <a class="active"  href="./blog">blog </a>
                     
                 </li><!-- end of li -->
 
