--- a/products.html
+++ b/products.html
@@ -263,7 +263,7 @@
                                 <ul class="location" style="margin-top: 30px!important;">
                                     <li><i class="fa fa-home" aria-hidden="true"></i> 
                                         <div class="content">
-                                            Ananthavarapu Road,<br> Etukuru, Guntur Dist,<br> Andhra Pradesh India - 522017. ,<br> 
+                                            Ananthavarapu Road,<br> Etukuru, Guntur Dist,<br> Andhra Pradesh India - 522017.<br> 
                                         </div>
                                     </li>
 
@@ -324,9 +324,12 @@
             </div> <!-- footer-container -->
 
 
-            <div class="copy-right text-center">
+            <div class="copy-right">
                 <div class="container">
-                    <p>2023 &copy; All Rights Reserved by <a href="#">Jaya cotton</a></p>
+                    <div style="display: flex; justify-content: space-between;">
+                        <p>2023 &copy; All Rights Reserved by <a href="#">Jaya cotton</a></p>
+                        <p>Designed by <a href="https://dt7solutions.com/" target="_blank">DT7 Solutions</a></p>
+                    </div>
                 </div>
             </div> <!-- copy-right -->
         </footer> <!-- footer-section -->
