menu sec changes

--- a/blog.html
+++ b/blog.html
@@ -267,8 +267,8 @@
             <div class="copy-right">
                 <div class="container">
                     <div style="display: flex; justify-content: space-between;">
-                        <p>2023 &copy; All Rights Reserved by <a href="#">Jaya cotton</a></p>
-                        <p>Designed by <a href="https://dt7solutions.com/" target="_blank">DT7 Solutions</a></p>
+                        <span>2023 &copy; All Rights Reserved by <a href="#">Jaya cotton</a></span>
+                        <span class="res-sec">Designed by <a href="https://dt7solutions.com/" target="_blank">DT7 Solutions</a></span>
                     </div>
                 </div>
             </div> <!-- copy-right -->
