fixe active menu issues

--- a/contact.html
+++ b/contact.html
@@ -291,7 +291,7 @@
                 </li><!-- end of li -->
 
                 <li>
-                    <a class="active"  href="./blog">blog </a>
+                    <a   href="./blog">blog </a>
                     
                 </li><!-- end of li -->
 
