--- a/products.html
+++ b/products.html
@@ -354,7 +354,7 @@
                 
 
                 <li class="active">
-                    <a  href="./products">Products</a>
+                    <a  class="active" href="./products">Products</a>
                     
                 </li><!-- end of li -->
 
