footer allignments changed

--- a/gallery.html
+++ b/gallery.html
@@ -182,11 +182,11 @@
                             <div class="footer-wrapper">
                                 <h3>About</h3>
 
-                                <p class="content-align">Jaya Cotton established in 2002 by Mr.N.Subbarao,<br>
-                                    is the leading Cotton Ginning Manufacturing<br>
-                                    Industry in the last 17 years The company is<br>
-                                     specialized in processing Raw Cotton and <br>
-                                     Supply Cotton Lint to the leading spinning mills <br>
+                                <p class="content-align">Jaya Cotton established in 2002 by Mr.N.Subbarao,
+                                    is the leading Cotton Ginning Manufacturing
+                                    Industry in the last 17 years The company is
+                                     specialized in processing Raw Cotton and 
+                                     Supply Cotton Lint to the leading spinning mills 
                                      and textile industries across India and other countries</p>
 
                                 <ul class="social-icon">
