--- a/blog.html
+++ b/blog.html
@@ -342,5 +342,15 @@
         <script src="assets/rs/revolution.extension.video.min.js"></script>
 
         <script src="assets/js/script.js"></script>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-245036408-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-245036408-1');
+        </script>
     </body>
 </html>
