--- a/index.html
+++ b/index.html
@@ -661,5 +661,15 @@
         }
         </script>
 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-245036408-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-245036408-1');
+        </script>
+
     </body>
 </html>
