--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- animated-css -->
         <link href="assets/css/animate.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/custom.css" rel="stylesheet" type="text/css">
         <!-- font-awesome-css -->
         <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <!-- owl-carrosel-css -->
@@ -93,10 +94,10 @@
 
 
 
-        <section class="blog-section section-padding" >
+        <section class="blog-section section-padding my-shadow" >
             <div class="container">
                 <div class="row " style="display: flex;justify-content: center;">
-                    <div class="col-sm-4 wow fadeInUp">
+                    <div class="col-sm-4 wow fadeInUp ">
                         <div class="blog-wrapper">
                             <img src="assets/images/blog/jayacotton-blogpage-raesons-why-cotton-production-369x226.png" alt="">
 
@@ -113,13 +114,13 @@
                                 <span class="title">Arthur Curry</span>
                             </div> -->
 
-                            <ul class="share">
+                            <!-- <ul class="share">
                                 <li><i class="fa fa-tag" aria-hidden="true"></i> Business</li>
 
                                 <li><i class="fa fa-clock-o" aria-hidden="true"></i> 2h ago</li>
 
                                 <li><a href="#"><i class="fa fa-comments" aria-hidden="true"></i> 10 Comments</a></li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
 
@@ -263,10 +264,15 @@
                 </div>
             </div> <!-- footer-container -->
 
-
-            <div class="copy-right text-center">
-                <div class="container">
+            <div class="copy-right">
+                <div class="container" >
+                   
+                        <div class=" col-12 col-lg-8">
                     <p>2023 &copy; All Rights Reserved by <a href="#">Jaya cotton</a></p>
+                </div>
+                <div class="col-12 col-lg-3" >
+                    <p>Desgined by <a href="https://dt7solutions.com/">Dt7solutions</a></p>
+                </div>
                 </div>
             </div> <!-- copy-right -->
         </footer> <!-- footer-section -->
