--- a/products.html
+++ b/products.html
@@ -324,9 +324,15 @@
             </div> <!-- footer-container -->
 
 
-            <div class="copy-right text-center">
-                <div class="container">
+            <div class="copy-right">
+                <div class="container" >
+                   
+                        <div class=" col-12 col-lg-8">
                     <p>2023 &copy; All Rights Reserved by <a href="#">Jaya cotton</a></p>
+                </div>
+                <div class="col-12 col-lg-3" >
+                    <p>Desgined by <a href="https://dt7solutions.com/">Dt7solutions</a></p>
+                </div>
                 </div>
             </div> <!-- copy-right -->
         </footer> <!-- footer-section -->
