--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <nav class="navbar navbar-inverse hidden-sm hidden-xs">
                 <div class="container">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="assets/images/dix.png" alt="image"></a>
+                        <a class="navbar-brand" href="./"><img src="assets/images/dix.png" alt="image"></a>
                     </div>
 
                     <div class="collapse navbar-collapse navbar-right">
