--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-4">
                             <div class="footer-wrapper footer-text-size">
-                                <img src="assets/images/dix.png" alt="">
+                                <a href="./"><img src="assets/images/dix.png" alt=""></a>
 
                                 <ul class="location" style="margin-top: 30px!important;">
                                     <li><i class="fa fa-home" aria-hidden="true"></i> 
@@ -521,10 +521,8 @@
                         <span class="res-sec">Designed By <a href="https://dt7solutions.com/" target="_blank">DT7 Solutions</a></span>
                     </div>
                 </div>
-                <div class="col-12  col-lg-3" >
-                    <p>Desgined by <a href="https://dt7solutions.com/">Dt7solutions</a></p>
-                </div>
-                </div>
+               
+               
             </div> <!-- copy-right -->
         </footer> <!-- footer-section -->
 
