--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
         <!-- style-css -->
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
         <link href="assets/css/custom.css" rel="stylesheet" type="text/css">
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     </head>
     <body class="subPage contactPage">
@@ -136,6 +137,9 @@
 
                                     <div class="form-group">
                                         <textarea id="message" name="message" class="form-control form-message" rows="4" required="" placeholder="Message"></textarea>
+                                    </div>
+                                    <div>
+                                        <div class="g-recaptcha px-3 " style="margin-bottom:20px;" data-sitekey="6LeWQF0lAAAAAAztEbvXxUkQy9rf83jy6_nR-fE5" required></div>
                                     </div>
 
                                     <div class="form-group">
