--- a/products.html
+++ b/products.html
@@ -329,7 +329,7 @@
                 <div class="container">
                     <div style="display: flex; justify-content: space-between;">
                         <span>2023 &copy; All Rights Reserved by <a href="#">Jaya cotton</a></span>
-                        <span class="res-sec">Designed by <a href="https://dt7solutions.com/" target="_blank">DT7 Solutions</a></span>
+                        <span class="res-sec">Crafted By <a href="https://dt7.agency/" target="_blank">Dt7.agency</a></span>
                     </div>
                 </div>
                 
