content and blogs aree added

--- a/about.html
+++ b/about.html
@@ -97,12 +97,15 @@
                         <div class="content ">
                             <h2>Founder's Message</h2>
                             <h3>Sri Subbarao Namburu M.A., N.I.S .</h3>
-
-                            <p class="content-align">Mr. N. Subbarao – His visionary behind this industry had humble beginnings as an employee first, before a Partner. His relentless hard work, dedication, and great communication skills helped him build relationships with clients all across India.</p>
+                            <p class="content-align">Founded in 2002 by Mr. N. Subbarao, Jaya Cotton stands as the leading Cotton Ginning Manufacturing Industry in India.</p>
+                            <p class="content-align">With over 17 years of expertise, we specialize in processing raw cotton and supplying high-quality cotton lint to leading spinning mills and textile industries both domestically and internationally.</p>
+                            <p class="content-align">Our state-of-the-art facilities, equipped with two T.M.C. units (18 gin and 24 gin), enable us to process up to 1000 bales of cotton per day.</p>
+                            <p class="content-align">This significant capacity ensures that we meet the demands of our clients efficiently and promptly.</p>
+                            <!-- <p class="content-align">Mr. N. Subbarao – His visionary behind this industry had humble beginnings as an employee first, before a Partner. His relentless hard work, dedication, and great communication skills helped him build relationships with clients all across India.</p>
 
                             <p class="content-align">In 2007, he branched out to establish a modern Cotton Ginning Unit on a 3.7 acre land on the outskirts of Guntur. His visionary mindset and ever-learning ability made him discover new possibilities to identify the evolving technology in cotton. He then introduced T.M.C. Units in the industry – one of the very few in Guntur, back then.</p>
                             <p class="content-align">Mr. Subbarao’s outgoing personality and always-welcoming nature made clients reach out to him without needing a Marketing/Sales team. He stands firm on his values in offering quality and maintaining long-standing relationships with all his customers. He believes that this not only helps the company grow but also makes it stronger.</p>
-                            <!-- <p class="content-align" style="width: 100%;">Mr. Subbarao founded Jaya Cotton in 2015 and is in the Cotton business for 4 decades, thriving and serving quality products to the world! He also formed Jaya Cotton’s Products as a sister company, which aims to begin direct exporting to pave the way to enter different markets soon. The company also plans on bringing in updated technology and refined process to offer
+                            <p class="content-align" style="width: 100%;">Mr. Subbarao founded Jaya Cotton in 2015 and is in the Cotton business for 4 decades, thriving and serving quality products to the world! He also formed Jaya Cotton’s Products as a sister company, which aims to begin direct exporting to pave the way to enter different markets soon. The company also plans on bringing in updated technology and refined process to offer
                                 quality products to the clients</p>
                             <p class="content-align">With all the experience and exposure, Mr.Subbarao’s success helped him become the Joint Secretary of A.P. Cotton Association, a member of the A.P.Cotton TMC consortium, Gen. secretary for Gymnastics Federation of India, Gen. Secretary for Gymnastics Association, Andhra Pradesh, Executive Committee Member, Andhra Pradesh Olympic Association, Chief coach for Indian Gymnastics team.</p> -->
                         </div>
@@ -114,14 +117,14 @@
                             <img src="assets/images/aboutpage/jaya-cotton-aboutpage-founder-image-444x500.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-12 " >
+                    <!-- <div class="col-md-12 " >
                         <div class="content about-content ">
                             
                             <p class="content-align">Mr. Subbarao founded Jaya Cotton in 2015 and is in the Cotton business for 4 decades, thriving and serving quality products to the world! He also formed Jaya Cotton’s Products as a sister company, which aims to begin direct exporting to pave the way to enter different markets soon. The company also plans on bringing in updated technology and refined process to offer
                                 quality products to the clients</p>
                             <p class="content-align">With all the experience and exposure, Mr.Subbarao’s success helped him become the Joint Secretary of A.P. Cotton Association, a member of the A.P.Cotton TMC consortium, Gen. secretary for Gymnastics Federation of India, Gen. Secretary for Gymnastics Association, Andhra Pradesh, Executive Committee Member, Andhra Pradesh Olympic Association, Chief coach for Indian Gymnastics team.</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section> <!-- about-office-section -->
@@ -137,8 +140,10 @@
                     </div>
                     <div class="col-md-6">
                         <div class="content" style="margin-top: 20px;">
-                           <p class="content-align">Jaya Cotton, established in 2002 by Mr.N.Subbarao, is the leading Cotton Ginning Manufacturing Industry in the last 17 years. The company is specialized in processing Raw Cotton and Supply Cotton Lint to the leading spinning mills and textile industries across India and other countries. With two T.M.C. units (18 gin and 24 gin), having a capacity to process 1000 bales a day,</p>
-                           <p class="content-align">Jaya Cotton has been one of the pioneers in Guntur’s Cotton market in the last 17 years. The company’s integrity and credibility in providing quality and 1imeIy services built long-lasting client relationships with India’s renowned industries, some of which are Arvind, Vardhaman, Welspun, Bombay Dyeing, and many more.</p>
+                            <p class="content-align">For nearly two decades, Jaya Cotton has been a pioneering force in Guntur’s cotton market. Our commitment to integrity, quality, and timely service has forged lasting relationships with some of India's most renowned industries, including Arvind, Vardhaman, Welspun, Bombay Dyeing, and many more.</p>
+                            <p class="content-align">We adhere to the highest standards to ensure our cotton lint meets the stringent requirements of our clients. With a robust infrastructure and dedicated workforce, we guarantee timely delivery and consistent quality. Our manufacturing processes are designed to be environmentally friendly, ensuring sustainable production.</p>
+                           <!-- <p class="content-align">Jaya Cotton, established in 2002 by Mr.N.Subbarao, is the leading Cotton Ginning Manufacturing Industry in the last 17 years. The company is specialized in processing Raw Cotton and Supply Cotton Lint to the leading spinning mills and textile industries across India and other countries. With two T.M.C. units (18 gin and 24 gin), having a capacity to process 1000 bales a day,</p>
+                           <p class="content-align">Jaya Cotton has been one of the pioneers in Guntur’s Cotton market in the last 17 years. The company’s integrity and credibility in providing quality and 1imeIy services built long-lasting client relationships with India’s renowned industries, some of which are Arvind, Vardhaman, Welspun, Bombay Dyeing, and many more.</p> -->
                            <h5>– Namburu Subba Rao-</h5>
                             <h5>Managing Partner, Jaya Cotton</h5>
                         </div>
