--- a/index.html
+++ b/index.html
@@ -138,11 +138,14 @@
 
                     <div class="col-md-6">
                         <div class="section-rightbar wow fadeInRight">
-                            <h3>Established - 2002</h3>
+                            <h3>Established in 2002</h3>
                             <h4>Jaya Cotton</h4>
-                            <p class="content-align">Jaya Cotton, established in 2002 by Mr.N.Subbarao, is the leading Cotton Ginning Manufacturing Industry in the last 17 years. The company is specialized in processing Raw Cotton and Supply Cotton Lint to the leading spinning mills and textile industries across India and other countries. With two T.M.C. units (18 gin and 24 gin), having a capacity to process 1000 bales a day,
-                                Jaya Cotton has been one of the pioneers in Guntur’s Cotton market in the last 17 years. The company’s integrity and credibility in providing quality and timely services built long-lasting client relationships with India’s renowned industries, some of which are Arvind, Vardhaman, Welspun, Bombay Dying, and many more.</p>
-                            
+                            <p class="content-align">by Mr. N. Subbarao, Jaya Cotton has been the leading Cotton Ginning Manufacturing Industry for
+                                the past 17 years. Specializing in processing raw cotton and supplying high-quality cotton lint, we serve leading
+                                spinning mills and textile industries across India and other countries. With two T.M.C. units (18 gin and 24 gin)
+                                and a capacity to process 1000 bales per day, Jaya Cotton has pioneered Guntur’s cotton market. Our integrity and
+                                credibility in delivering quality and timely services have built long-lasting relationships with India’s renowned
+                                industries, including Arvind, Vardhaman, Welspun, Bombay Dyeing, and many more.</p>
                         </div>
                     </div>
                 </div>
