contact button id name fixed

--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <button class="btn btn-primary" onclick="Mail()" type="button">Submit</button>
+                                        <button class="btn btn-primary" id="btnsubmit" onclick="Mail()" type="button">Submit</button>
                                     </div>
                                 </form>
                             </div> <!-- mail-section -->
