--- a/contact.html
+++ b/contact.html
@@ -386,17 +386,27 @@
         <script src="assets/rs/revolution.extension.parallax.min.js"></script>
         <script src="assets/rs/revolution.extension.slideanims.min.js"></script>
         <script src="assets/rs/revolution.extension.video.min.js"></script>
-
         <script src="assets/js/script.js"></script>
 
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+        </script>
+        <script type="text/javascript">
+          (function () {
+            emailjs.init({
+              publicKey: "ayB1ovewIh1u5ekdN",
+            });
+          })();
+        </script>
+
+
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-245036408-1"></script>
+        <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-245036408-1"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-245036408-1');
-        </script>
+        </script> -->
     </body>
 </html>
